<resources>
    <string name="app_name_small">PassPort POS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_subtotal">Subtotal</string>
    <string name="txt_keyboard">Keyboard</string>
    <string name="txt_search_item_barcode">Search for item/barcode</string>
    <string name="txt_item">Item</string>
    <string name="txt_email">Email</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_total_percent_off">TOTAL %% OFF</string>
    <string name="txt_reprint">Reprint</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_receive_cap">RECEIVE</string>
    <string name="txt_add_note_cap">ADD NOTE</string>
    <string name="txt_search_quantity">Quantity Search</string>
    <string name="txt_return_cap">RETURN</string>
    <string name="txt_select_cashier_to_login">Select Cashier to login with.</string>
    <string name="txt_cashier_prompt">Select Cashier</string>
    <string name="txt_not_found">Not Found</string>
    <string name="txt_product_not_found">Product not found.</string>
    <string name="msg_email_receipt_sent_successfully">Email receipt was sent successfully.</string>
    <string name="msg_email_receipt_not_sent">Email receipt was not sent.</string>
    <string name="msg_receipt_sent_to_printer">Receipt sent successfully to printer.</string>
    <string name="msg_unable_to_print_receipt">Unable to print receipt. Check printer settings.</string>
    <string name="txt_administrator">Administrator</string>
    <string name="txt_invalid_permission">Invalid Permissions</string>
    <string name="msg_need_return_permission">Need cashier with Return Permissions to process returns or zero amount.</string>
    <string name="txt_welcome_to">Welcome to</string>
    <string name="txt_no_products">No Products</string>
    <string name="msg_enter_a_product">Enter a product to sell.</string>
    <string name="txt_amount_due_label">Amount Due:</string>
    <string name="txt_customer_change">Customer Change</string>
    <string name="txt_customer_change_label">Customer Change:</string>
    <string name="txt_sale_completed">Sale Completed</string>
    <string name="msg_key_used">The login key is being used by another terminal. Your transactions will not be saved on the server.</string>
    <string name="msg_update_available">A required update is available, press download and it will install itself. Should only take a minute.</string>
    <string name="msg_login_error">This app is did not successfully login. Your transactions will not be saved on the server.</string>
    <string name="txt_change_label">Change:</string>
    <string name="msg_no_network_sale_will_be_uploaded_when_available">No network connection. Unable to upload sale data. Any unsent sale data will be sent when an Internet connection returns.</string>
    <string name="msg_sync_not_registered_device">This device has not been registered to the account. No data has been synced.</string>
    <string name="msg_sync_no_user">There is no user with that email address. Please try again.</string>
    <string name="msg_sync_account_expired">This user\'s account has expired, please log into the website to reactivate.</string>
    <string name="txt_updating_store_setting">Updating Store Settings&#8230;</string>
    <string name="txt_updating_departments">Updating Departments&#8230;</string>
    <string name="txt_updating_products">Updating Products&#8230;</string>
    <string name="txt_updating_buttons">Updating Buttons&#8230;</string>
    <string name="txt_updating_admin">Updating Admin&#8230;</string>
    <string name="txt_updating_cashiers">Updating Cashiers&#8230;</string>
    <string name="txt_updating_day_reports">Updating Day Reports&#8230;</string>
    <string name="txt_updating_ostatus">Updating OrderStatus&#8230;</string>
    <string name="txt_updating_cusdata">Updating CustomerData&#8230;</string>
    <string name="txt_sync_success">Sync Success</string>
    <string name="txt_address">Address</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_website_address">Website Address</string>
    <string name="txt_reprint_receipt_ellipsis">Re-Printing Receipt&#8230;</string>
    <string name="txt_email_receipt_to_customer">Email Receipt to Customer</string>
    <string name="txt_training">Training</string>
    <string name="msg_return_sale">Making this sale a return will put a negative on all products in the sale. Insert a message for reason of the return.</string>
    <string name="msg_add_note">Enter a note to add to the sale. It will show up as a non value product.</string>
    <string name="msg_invalid_last_name">Enter a valid last name</string>
    <string name="msg_invalid_first_name">Enter a valid first name</string>
    <string name="msg_invalid_email">Enter a valid email id</string>
    <string name="msg_invalid_phone">Enter a valid phone number</string>
    <string name="txt_add_note_or_sale">Note/Item</string>
    <string name="txt_add_note">Add Note</string>
    <string name="txt_add_customer">Add Customer</string>
    <string name="txt_void_sale">Void Sale</string>
    <string name="msg_void_sale">Are you sure you want to void this sale?</string>
    <string name="txt_credit_card">Credit Card</string>
    <string name="txt_declined">Declined</string>
    <string name="txt_reversed">Reversed</string>
    <string name="txt_external_dir">GetSignature</string>
    <string name="txt_customers">Customers</string>
    <string name="txt_register">Register</string>
    <string name="txt_signature_confirmation">Signature Confirmation</string>
    <string name="txt_help">Help</string>
    <string name="txt_inventory">Inventory</string>
    <string name="txt_voided_cap">VOIDED</string>
    <string name="txt_sync">Sync</string>
    <string name="txt_customer">Customer</string>
    <string name="txt_admin_login">Admin Login</string>
    <string name="txt_insert_item_name">Insert Item Name</string>
    <string name="txt_description_label">Description:</string>
    <string name="txt_price_label">Price:</string>
    <string name="txt_print">Print</string>
    <string name="txt_unprocessed_credit_card_swipes">Unprocessed Credit Card Swipes</string>
    <string name="msg_unprocessed_transaction_needs_manager_login">There are unprocessed credit card swipes that need to be sent to BridgePay Servers. Have a manager login and process them under the Reports -> Mercury Auths Tab.</string>
    <string name="txt_no_network">No Network</string>
    <string name="msg_unable_to_download_data">No network connection. Unable to download data.</string>
    <string name="txt_login_error">Login Error</string>
    <string name="msg_require_email">Login needs an Email Address.</string>
    <string name="msg_require_key">Login needs a Login Key.</string>
    <string name="msg_require_terminal_name">Login needs a Terminal Name.</string>
    <string name="msg_unable_to_login">No network connection. Unable to login.</string>
    <string name="txt_logging_in">Logging in&#8230;</string>
    <string name="txt_login_failed">Login Failed</string>
    <string name="txt_sync_failed">Sync Failed</string>
    <string name="txt_update_available">Update Available</string>
    <string name="txt_downloading_update">Downloading Update&#8230;</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_reports">Reports</string>
    <string name="txt_find_item">Find Item</string>
    <string name="txt_edit_item_in_database">Edit Item In Database</string>
    <string name="txt_finish_viewing_item">Finish Viewing Item</string>
    <string name="txt_user_email_label">User Email:</string>
    <string name="txt_user_email">User Email</string>
    <string name="txt_device_key_label">Device Key:</string>
    <string name="txt_device_key">Device Key</string>
    <string name="txt_terminal_name_label">Terminal Name:</string>
    <string name="txt_terminal_name">Terminal Name</string>
    <string name="txt_submit_label">Submit:</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_login">Login</string>
    <string name="txt_regbottom">\u00a9 2020 PASS PORT POS</string>
    <string name="txt_regtop">PassPort POS</string>
    <string name="txt_sending_email">Sending Email&#8230;</string>
    <string name="txt_printing_receipt">Printing Receipt&#8230;</string>
    <string name="txt_save_error">Save Error</string>
    <string name="msg_no_data_to_save">No data to save.</string>
    <string name="txt_save_success">Save Success</string>
    <string name="txt_save_failed">Save Failed</string>
    <string name="msg_report_saved">Report Saved Successfully.</string>
    <string name="msg_report_save_failed">Failed Saving Report.</string>
    <string name="txt_save_report">Save Report</string>
    <string name="txt_total">Total</string>
    <string name="txt_changeamount">Customer Change</string>
    <string name="txt_collect">Collect</string>
    <string name="txt_cashier">Cashier</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_unlicensed">Unlicensed</string>
    <string name="txt_select_file">Select File</string>
    <string name="txt_department_label">Department:</string>
    <string name="txt_email_address_label">Email Address:</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_customer_name_label">Customer Name:</string>
    <string name="txt_customer_name">Customer Name</string>
    <string name="txt_product_name_label">Product Name:</string>
    <string name="txt_product_name">Product Name</string>
    <string name="txt_description">Description</string>
    <string name="txt_price">Price</string>
    <string name="txt_cost_label">Cost:</string>
    <string name="txt_cost">Cost</string>
    <string name="txt_on_hand_label">On Hand:</string>
    <string name="txt_on_hand">On Hand</string>
    <string name="txt_low_amount_label">Low Amount:</string>
    <string name="txt_low_amount">Low Amount</string>
    <string name="txt_barcode_label">Barcode:</string>
    <string name="txt_barcode">Barcode</string>
    <string name="txt_scan_barcode">Scan Barcode</string>
    <string name="txt_sale_price_label">Sale Price:</string>
    <string name="txt_sale_price">Sale Price</string>
    <string name="txt_sale_start_date_label">Sale Start Date:</string>
    <string name="txt_disabled">Disabled</string>
    <string name="txt_sale_end_date_label">Sale End Date:</string>
    <string name="txt_lan">LAN</string>
    <string name="txt_bluetooth">Bluetooth</string>
    <string name="txt_usb_os_3_above">USB: (OS 3.0+)</string>
    <string name="txt_2_inch_printer">2\" Printer</string>
    <string name="txt_3_inch_printer">3\" Printer</string>
    <string name="txt_kick_cash_drawer">Kick Cash Drawer</string>
    <string name="txt_main_printer_for_report_and_reprint">Main Printer (For Reports and Reprints)</string>
    <string name="txt_search_for_printer">Search for Printer</string>
    <string name="txt_tax_1_label">Tax 1:</string>
    <string name="txt_tax_1_name">Title of Rate</string>
    <string name="txt_tax_1_amount_percent">0.0%</string>
    <string name="txt_tax_2_label">Tax 2:</string>
    <string name="txt_tax_2_name">Tax 2 Name</string>
    <string name="txt_tax_2_amount_percent">Tax 2 Amount %%</string>
    <string name="txt_tax_3_label">Tax 3:</string>
    <string name="txt_tax_3_name">Tax 3 Name</string>
    <string name="txt_tax_3_amount_percent">Tax 3 Amount %%</string>
    <string name="txt_ip_address">&lt;IP Address&gt;</string>
    <string name="txt_save">Save</string>
    <string name="txt_print_open_order">Printer for Open Order</string>
    <string name="txt_date_time">Date</string>
    <string name="txt_type">Type</string>
    <string name="txt_auth_number">#Auth</string>
    <string name="txt_tip">Tip</string>
</resources>