<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/title_txt"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_auth_number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/title_txt"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_date_time" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textSize="@dimen/title_txt"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_amount" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/title_txt"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_tip" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/title_txt"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_type" />

        </LinearLayout>

    <ListView
        android:id="@+id/credit_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>