<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow >

            <TextView
                android:layout_gravity="center|start"
                android:padding="6dp"
                android:text="@string/txt_customer_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/nameEdit"
                android:hint="@string/txt_customer_name"
                android:inputType="text"
                android:padding="6dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow >

            <TextView
                android:layout_gravity="center|start"
                android:padding="6dp"
                android:text="@string/txt_email_address_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/descEdit"
                android:hint="@string/txt_email_address"
                android:inputType="textEmailAddress"
                android:padding="6dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

    </TableLayout>

</ScrollView>